# simple-calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/controller/: CalculatorController.h
include/model/: CalculatorModel.h
include/view/: CalculatorView.h
src/: main.cpp
src/controller/: CalculatorController.cpp
src/model/: CalculatorModel.cpp
src/view/: CalculatorView.cpp
